# DynamicAnnotationDB

./: .bumpversion.cfg  .env.dev  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  doc_requirements.txt  docker-compose.yml  pyproject.toml  pytest.ini  release.sh  requirements.in  requirements.txt  setup.cfg  setup.py  test_requirements.txt  uwsgi.ini
.github/workflows/: dynamic_annotation_db _ci.yml  release.yml
alembic/: run.py
alembic/versions/: 7c79eff751b4_add_parent_version_column.py
docs/: conf.py  index.rst  intro.rst
docs/api/: dadb_annotation_client.rst  dadb_base_interface.rst  dadb_materialization_client.rst  dynamicannotationdb.rst  modules.rst
dynamicannotationdb/: __init__.py  annodb.py  annodb_meta.py  annotation.py  annotation_client.py  api.py  base.py  client.py  config.py  database.py  errors.py  interface.py  key_utils.py  main.py  materialization_client.py  model.py  models.py  prestart.sh  schema.py  schemas.py  segmentation.py  service.py  synapse_test.py  table_info.py
dynamicannotationdb/clients/: annotation_client.py  database_client.py  segmentation_client.py
dynamicannotationdb/migration/: __init__.py  migrate.py
dynamicannotationdb/migration/alembic/: alembic.ini  env.py  run.py  (+1 more)
scripts/: example_insert.py
tests/: __init__test.py  conftest.py  controller_test.py  fixtures.py  interface_test.py  model_test.py  schema_test.py  service_test.py  test_annotation.py  test_annotation_client.py  test_database.py  test_errors.py  test_interface.py  test_materialization_client.py  test_schema.py  test_segmentation.py
(+10 files in other folders)
